[package]
name = "netzip"
version = "0.1.0"
edition = "2024"
description = "A library for accessing files in remote ZIPs over HTTP without downloading the entire archive"
categories = ["web-programming::http-client", "compression"]
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.10.1"
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
netzip_parser = { path = "../netzip_parser" }
reqwest = "0.12.15"
thiserror = "2.0.12"
