[package]
name = "netzip_cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for efficiently working with remote ZIP files over HTTP without downloading the entire archive"
categories = [
    "command-line-utilities",
    "web-programming::http-client",
    "compression",
]
authors.workspace = true
readme.workspace = true

[[bin]]
name = "netzip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
indicatif = "0.17.11"
tokio = { version = "1.44.1", features = ["full"] }
netzip = { path = "../netzip" }
reqwest = "0.12.15"
comfy-table = "7.1.4"
bittenhumans = "0.1.0"
